Remove SSE